tests/type_errors/try_catch_type_mismatch.nos
# expect_error: type
# try and catch branches must return the same type
main() = {
    x = try { 42 } catch { _ -> "error" }
    x
}
